discussion/kv_engine/160718/160718_rev15_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47462: Introduce "eager" checkpoint removal

Adds config param `checkpoint_removal_mode`.

Prior to this patch, closed unreferenced checkpoints could remain in
memory for an extended amount of time.

In a steady state system, closed unreffed checkpoints have
comparatively little value; they will only ever be used again if a new
DCP stream is created or a cursor reregistered after being dropped.

In addition, to avoid unnecessarily evicting items when memory could
instead be recovered from unreffed checkpoints, PagingVisitors
currently remove closed unreffed checkpoints before evicting. This does
not provide clear separation of concerns.

It has also been seen that in heavy bulk load scenarios, PagingVisitors
may remove more checkpoints than the dedicated CheckpointVisitor, and
checkpoint removal becomes a reasonable percentage of the run time of
the PagingVisitor.

"Eager" checkpoint removal queues closed checkpoints for destruction as
soon as they become unreferenced; rather than reactively working to
free checkpoints in an OOM situation they can be proactively removed
as soon as possible.

Change-Id: I9ec58d4eaa0059c26d5cf32270802d9cb625385e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-09-23 12:09:49.000000000
Message: 
Uploaded patch set 15.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-23 12:56:26.000000000
Message: 
Patch Set 15: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34311/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:536:13:
error: use of undeclared identifier "numMetaItemsRemoved"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34311/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40310/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint_manager.cc(532): error C2065: "numMetaItemsRemoved": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40310/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12754/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:536:13: error: use of undeclared identifier "numMetaItemsRemoved" [clang-diagnostic-error]
            numMetaItemsRemoved,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:537:13: error: use of undeclared identifier "numNonMetaItemsRemoved" [clang-diagnostic-error]
            numNonMetaItemsRemoved,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:538:13: error: use of undeclared identifier "memoryReleased" [clang-diagnostic-error]
            memoryReleased,
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12754/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:536:13:
error: use of undeclared identifier "numMetaItemsRemoved" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12754/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2393/ : FAILURE

Compile error at [2021-09-23T12:26:16.652Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:536:13:
error: use of undeclared identifier "numMetaItemsRemoved"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2393/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14627/ : FAILURE

Compile error at [2021-09-23T12:33:29.752Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint_manager.cc:536:13:
error: ?numMetaItemsRemoved? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14627/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13512/ : FAILURE

Compile error at [2021-09-23T12:53:54.769Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/checkpoint_manager.cc:536:13:
error: use of undeclared identifier "numMetaItemsRemoved"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13512/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2426/ : FAILURE

Compile error at [2021-09-23T12:30:44.347Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/checkpoint_manager.cc:536:13:
error: ?numMetaItemsRemoved? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2426/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14369/ : FAILURE

Compile error at [2021-09-23T12:39:01.849Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint_manager.cc:536:13:
error: ?numMetaItemsRemoved? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14369/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15137/ : FAILURE

Compile error at [2021-09-23T12:46:30.429Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:536:13:
error: use of undeclared identifier "numMetaItemsRemoved"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15137/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22637/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11544/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2021-09-23 12:56:34.000000000
Message: 
Patch Set 15: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/263402/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
